src/test/c/accept/18-scopes.arcx
{
    var: int;
    var = 1;
}
{
    var: int;
    var = 2;
}
{
    var: int;
}