src/test/c/reject/38-multiple-else-without-if.arcx
else {
    x:int=1;
} else {
    y:int=2;
} 